[package]
name = "crablog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
toml = "0.5"
comrak = "0.15"
handlebars = "4.3"
anyhow = "1.0"
dialoguer = "0.10"